# django-tutorial

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
mysite/: settings.py  urls.py
polls/: admin.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/static/polls/: style.css
polls/templates/polls/: detail.html  index.html  results.html
templates/admin/: base_site.html
