[tool.poetry]
name = "django-tutorial"
version = "0.1.0"
description = "learning django with pyenv, pyenv-virtualenv, & poetry"
authors = ["Mugilan <mugilancodes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
