[tool.poetry]
name = "django-tutorial"
version = "0.1.0"
description = "learning django with pyenv, pyenv-virtualenv, & poetry"
authors = ["Mugilan <mugilancodes@gmail.com>"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
isort = "^5.9.1"
pylint = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
